--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 $md: 768px;
 $xl: 1024px;
 
@@ -16,6 +18,8 @@ $xl: 1024px;
 
 body{
     background: #000;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
 }
 
 .container{
@@ -34,6 +38,13 @@ body{
         background-image: url(../img/logo.png);
         background-size: cover;
         background-repeat: no-repeat;
+    }
+
+    .titulo{
+        color: #ffffff;
+        text-align: center;
+        margin-top: 20px;
+        font-size: 40px;
     }
 
     .imagenes{        
