--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 $md: 768px;
 $xl: 1024px;
 
@@ -31,20 +36,26 @@ body{
     }
 
     .logo{        
-        height: 100px;     
-        width: 280px;
+        height: 80px;     
         margin: auto;     
-        margin-top: 30px;
+        margin-top: 30px;        
         background-image: url(../img/logo.png);
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
+        background-position:center;
+        
     }
 
     .titulo{
         color: #ffffff;
         text-align: center;
         margin-top: 20px;
-        font-size: 40px;
+        font-size: 45px;
+    }
+    .subTitulo{
+        @extend .titulo;
+        margin-top: 10px;
+        font-size: 35px;
     }
 
     .imagenes{        
